--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="container">
-
-      <a href="a.html"><button>Objective A</button></a>
-      <a href="b.html"><button>Objective B</button></a>
-      <a href="c.html"><button>Objective C</button></a>
-      <a href="d.html"><button>Objective D</button></a>
-      <a href="e.html"><button>Objective E</button></a>
-
-      <a href="index.html"><button>Index</button></a>
-
-    </div>
+    <div id="container"></div>
 
   <!-- build:js scripts/vendor.min.js -->
   <!-- bower:js -->
