Wrapped up for now

--- a/tests/index.html
+++ b/tests/index.html
@@ -64,3 +64,18 @@
     </script>
   </body>
 </html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
