Objectives A through C completed

--- a/tests/index.html
+++ b/tests/index.html
@@ -84,3 +84,13 @@
     </script>
   </body>
 </html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
