--- a/tests/index.html
+++ b/tests/index.html
@@ -94,3 +94,23 @@
     </script>
   </body>
 </html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+  <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
